// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`telemetry-events-dev-tool when rendered renders 1`] = `
<body>
  <div>
    <div
      class="overflow-module__overflow__x--auto___S6oVL padding-module__padding--xs___QwhaB border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey100___PRzUt"
      style="position: absolute; bottom: 0px; left: 0px; right: 0px; z-index: 999;"
    >
      <div
        class="flex-module__flex___eFLEc flex-module__flex__direction--horizontal___a32zo flex-module__flex__alignItems--center___0Vsy9 flex-module__flex__gap--xs___tt3So"
      />
    </div>
  </div>
</body>
`;

exports[`telemetry-events-dev-tool when rendered when telemetry event is sent given telemetry event with maximal data, when event is clicked, renders 1`] = `
<body>
  <div>
    <div
      class="overflow-module__overflow__x--auto___S6oVL padding-module__padding--xs___QwhaB border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey100___PRzUt"
      style="position: absolute; bottom: 0px; left: 0px; right: 0px; z-index: 999;"
    >
      <div
        class="flex-module__flex___eFLEc flex-module__flex__direction--horizontal___a32zo flex-module__flex__alignItems--center___0Vsy9 flex-module__flex__gap--xs___tt3So"
      >
        <button
          class="padding-module__padding__right--xs___kpsQP padding-module__padding__left--xs___dBc6X border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu pointer"
          data-cursor-test="pointer"
          data-telemetry-event-test="some-name-2/some-action-2"
          role="button"
          style="flex-shrink: 0;"
          tabindex="0"
        >
          (
          2
          ) 
          some-name-2
           / 
          some-action-2
        </button>
        <button
          class="padding-module__padding__right--xs___kpsQP padding-module__padding__left--xs___dBc6X border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu pointer"
          data-cursor-test="pointer"
          data-telemetry-event-test="some-name-1/some-action-1"
          role="button"
          style="flex-shrink: 0;"
          tabindex="0"
        >
          (
          1
          ) 
          some-name-1
           / 
          some-action-1
        </button>
      </div>
    </div>
  </div>
  <div
    class="popover-module__popover__overlay___TcKv- absolute-module__absolute___MX--Y"
    data-popover-overlay-test="true"
  >
    <div
      class="popover-module__popover__content___UCUZ6"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, -8px);"
    >
      <div
        class="overflow-module__overflow__x--auto___S6oVL padding-module__padding--xs___QwhaB border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu"
        style="max-width: 650px;"
      >
        <div>
          Name: 
          some-name-1
        </div>
        <div>
          Action: 
          some-action-1
        </div>
        <div>
          User Interaction: 
          true
        </div>
        <div>
          Parameters:
          <pre>
            {
  "some": "parameter",
  "someOther": "parameter"
}
          </pre>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`telemetry-events-dev-tool when rendered when telemetry event is sent given telemetry event with minimal data, when event is clicked, renders 1`] = `
<body>
  <div>
    <div
      class="overflow-module__overflow__x--auto___S6oVL padding-module__padding--xs___QwhaB border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey100___PRzUt"
      style="position: absolute; bottom: 0px; left: 0px; right: 0px; z-index: 999;"
    >
      <div
        class="flex-module__flex___eFLEc flex-module__flex__direction--horizontal___a32zo flex-module__flex__alignItems--center___0Vsy9 flex-module__flex__gap--xs___tt3So"
      >
        <button
          class="padding-module__padding__right--xs___kpsQP padding-module__padding__left--xs___dBc6X border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu pointer"
          data-cursor-test="pointer"
          data-telemetry-event-test="some-name-2/some-action-2"
          role="button"
          style="flex-shrink: 0;"
          tabindex="0"
        >
          (
          2
          ) 
          some-name-2
           / 
          some-action-2
        </button>
        <button
          class="padding-module__padding__right--xs___kpsQP padding-module__padding__left--xs___dBc6X border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu pointer"
          data-cursor-test="pointer"
          data-telemetry-event-test="some-name-1/some-action-1"
          role="button"
          style="flex-shrink: 0;"
          tabindex="0"
        >
          (
          1
          ) 
          some-name-1
           / 
          some-action-1
        </button>
      </div>
    </div>
  </div>
  <div
    class="popover-module__popover__overlay___TcKv- absolute-module__absolute___MX--Y"
    data-popover-overlay-test="true"
  >
    <div
      class="popover-module__popover__content___UCUZ6"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, -8px);"
    >
      <div
        class="overflow-module__overflow__x--auto___S6oVL padding-module__padding--xs___QwhaB border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu"
        style="max-width: 650px;"
      >
        <div>
          Name: 
          some-name-2
        </div>
        <div>
          Action: 
          some-action-2
        </div>
        <div>
          User Interaction: 
          false
        </div>
        <div>
          Parameters:
          <pre />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`telemetry-events-dev-tool when rendered when telemetry event is sent renders 1`] = `
<body>
  <div>
    <div
      class="overflow-module__overflow__x--auto___S6oVL padding-module__padding--xs___QwhaB border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey100___PRzUt"
      style="position: absolute; bottom: 0px; left: 0px; right: 0px; z-index: 999;"
    >
      <div
        class="flex-module__flex___eFLEc flex-module__flex__direction--horizontal___a32zo flex-module__flex__alignItems--center___0Vsy9 flex-module__flex__gap--xs___tt3So"
      >
        <button
          class="padding-module__padding__right--xs___kpsQP padding-module__padding__left--xs___dBc6X border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu pointer"
          data-cursor-test="pointer"
          data-telemetry-event-test="some-name-2/some-action-2"
          role="button"
          style="flex-shrink: 0;"
          tabindex="0"
        >
          (
          2
          ) 
          some-name-2
           / 
          some-action-2
        </button>
        <button
          class="padding-module__padding__right--xs___kpsQP padding-module__padding__left--xs___dBc6X border-module__border__radius--l___-54nx border-module__border__width--xxs___J0tZ9 border-module__border__color--grey60___P9JMH border-module__border__style--solid___1Qy1J background-color-module__backgroundColor--grey80___abytu pointer"
          data-cursor-test="pointer"
          data-telemetry-event-test="some-name-1/some-action-1"
          role="button"
          style="flex-shrink: 0;"
          tabindex="0"
        >
          (
          1
          ) 
          some-name-1
           / 
          some-action-1
        </button>
      </div>
    </div>
  </div>
</body>
`;
